<?xml version="1.0"?>
<package format="2">
  <name>shared_msgs</name>
  <version>0.0.1</version>
  <description>Shared messages for ego-planner project</description>
  <maintainer email="iszhouxin@todo.todo">iszhouxin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
